--- a/views/cart.html
+++ b/views/cart.html
@@ -1,249 +1,54 @@
-
 <body>
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
     {{>header}}
-            <!-- Mobile Menu end -->
-             <div class="breadcome-area">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="breadcome-list">
-                                <div class="row">
-                                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6"></div>                        
-                                    <div class=" row hpanel mt-b-30 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                        <div class="panel-body file-body file-cs-ctn">
-                                            
-                                           <img id="imgPreview" style="height: 200px; width:200px;" src="https://www.csklegal.com/wp-content/uploads/2014/07/no-image.png">
-                                        </div>
-                                        <div class="panel-footer">
-                                             <input id="uploadSelfieInput" type="file" class="form-control"/>  
-                                        </div>
-                                        <div class="text-center credit-card-custom office-pad-bottom">
-                                            <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                            <button id="uploadCart" style="padding: 10px; margin-top: 5px; font-size: 25px; font-weight: bold;" type="button"
-                                             class="btn btn-success btn-block ">Upload</button>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-               <div class="author-area-pro">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                        <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land1.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                                <!-- <h4>City Core Ltd</h4>
-                                <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. .</p> -->
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                            <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land2.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                          
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                   <!--  <a class="btn btn-md btn-primary">Delete</a> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                             <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land3.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                             
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                        <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land4.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                                <!-- <h4>City Core Ltd</h4>
-                                <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. .</p> -->
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                            <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land5.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                          
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                   <!--  <a class="btn btn-md btn-primary">Delete</a> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                             <div class="personal-info-wrap">
-                            <div>
-                                <img src="img/notification/land6.jpg" alt="profile">
-                            </div>
-                            <div class="widget-text-box">
-                             
-                                <div class="text-right like-love-list">
-                                    <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+    <!-- Mobile Menu end -->
+    <div class="breadcome-area">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                    <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land7.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                            <!-- <h4>City Core Ltd</h4>
-                            <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. .</p> -->
-                            <div class="text-right like-love-list">
-                          <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                        <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land8.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                      
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                               <!--  <a class="btn btn-md btn-primary">Delete</a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                         <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land9.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                         
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="breadcome-list">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6"></div>
+                            <div class=" row hpanel mt-b-30 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="panel-body file-body file-cs-ctn">
 
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                    <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land10.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                            <!-- <h4>City Core Ltd</h4>
-                            <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. .</p> -->
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
+                                    <img id="imgPreview" style="height: 200px; width:200px;"
+                                        src="https://www.csklegal.com/wp-content/uploads/2014/07/no-image.png">
+                                </div>
+                                <div class="panel-footer">
+                                    <input id="uploadSelfieInput" type="file" class="form-control" />
+                                </div>
+                                <div class="text-center credit-card-custom office-pad-bottom">
+                                    <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
+                                    <button id="uploadCart"
+                                        style="padding: 10px; margin-top: 5px; font-size: 25px; font-weight: bold;"
+                                        type="button" class="btn btn-success btn-block ">Upload</button>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                        <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land11.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                      
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                               <!--  <a class="btn btn-md btn-primary">Delete</a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                         <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land12.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                         
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6"></div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 office-pad-bottom">
-                    <div class="personal-info-wrap">
-                        <div>
-                            <img src="img/notification/land13.jpg" alt="profile">
-                        </div>
-                        <div class="widget-text-box">
-                            <!-- <h4>City Core Ltd</h4>
-                            <p>Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat. Sed porttitor lectus nibh. .</p> -->
-                            <div class="text-right like-love-list">
-                                <a href="apply"  class="btn btn-success-supermanic btn-md">Delete</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-         
-            </div>
-                             <div class="custom-pagination container">
-                                <ul class="pagination">
-                                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                                </ul>
-                            </div>
-                                   
         </div>
-     <!--    mall -->
-      
-
-   {{>footer}}
     </div>
- 
+    <div class="author-area-pro">
+        <div class="container-fluid">
+            <div class="row" id="cart-image-view">
+                <!--Preview All Cart Display-->
+            </div>
+            <div class="custom-pagination container">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </div>
+        </div>
+        {{>footer}}
+    </div>
