--- a/views/settings.html
+++ b/views/settings.html
@@ -223,8 +223,14 @@
                                               
                                                 </div>
                                             </div>
+                                            <style>
+                                                #update-user {
+                                                    display: none;
+                                                    margin: auto;
+                                                }
+                                            </style>
                                             <div class="text-center custom-pro-edt-ds bottom-pad-button">
-                                                <button type="button" class="btn btn-ctl-bt waves-effect waves-light m-r-10 bg-green" >Update
+                                                <button id="update-user" type="button" class="btn btn-ctl-bt waves-effect waves-light m-r-10 bg-green" >Update
                                                     </button>
                                             
                                             </div>
