--- a/views/tree.html
+++ b/views/tree.html
@@ -71,15 +71,30 @@
                              <h3 class="product-cart-dn">Shopping</h3>
                             <div class="product-list-cart">
                                 <div class="product-status-wrap border-pdt-ct ">
-                                     <table style="width:50%" class="table table-borderless ">
-                                        <tr>
-                                            <th style="text-align: center;">Downliners</th>
+                                    <style>
+                                        .Downliner {
+                                            width: 100%;
+                                            text-align: center;
+                                            margin: auto;
+                                        }
+                                        #downlinerBlock {
+                                            width: 30px;
+                                        }
+                                    </style>
+                                    <div class="col-6 mx-auto Downliner" id="downliner">
                                        
-                                        </tr>
-                                        <tr id="downlinerBlock">
-                                            <td>  No Downliners Found</td>
-                                        </tr>
-                                    </table>
+                                    </div>
+                                    <div class="table-div">
+                                        <table style="width:50%" class="table table-borderless ">
+                                            <tr>
+                                                <th style="text-align: center;">Downliners</th>
+                                           
+                                            </tr>
+                                            <tr id="downlinerBlock">
+                                                <td>  No Downliners Found</td>
+                                            </tr>
+                                        </table>
+                                    </div>
                      
                                 </div>
                             </div> 
