--- a/views/fundManagement.html
+++ b/views/fundManagement.html
@@ -44,25 +44,24 @@
                                                 <div class="review-content-section">
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
-                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                        <form id="addFund" class="payment-form mg-t-30 form-border-input-show text-white-label ">
                                                       
                                                             <div class="form-group">
-                                                                <label for="email">Username</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <label for="email">User Id</label>
+                                                                <input name="userID" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Amount</label>
-                                                                <input name="name" type="text" class="form-control" placeholder="">
+                                                                <input name="account" name="name" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
                                                               
-                                                                    <textarea class="form-control" type='text'
-                                                                    ></textarea>
+                                                                    <textarea name="reason" class="form-control" type='text' required></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Add</button>
+                                                                <button id="addFundBtn" type="submit" class="btn btn-success btn-block ">Add Fund</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -79,25 +78,24 @@
                                                 <div class="review-content-section">
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
-                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                        <form id="deductFund" class="payment-form mg-t-30 form-border-input-show text-white-label ">
                                                       
                                                             <div class="form-group">
-                                                                <label for="email">Username</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <label for="email">User Id</label>
+                                                                <input name="userID" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Amount</label>
-                                                                <input name="name" type="text" class="form-control" placeholder="">
+                                                                <input name="account" name="name" type="text" class="form-control" placeholder="" required>
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
                                                               
-                                                                    <textarea class="form-control" type='text'
-                                                                    ></textarea>
+                                                                    <textarea name="reason" class="form-control" type='text' required></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Deduct</button>
+                                                                <button id="deductFundBtn" type="submit" class="btn btn-success btn-block ">Add Fund</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -114,29 +112,29 @@
                                                 <div class="review-content-section">
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
-                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                        <form id="transferFund" class="payment-form mg-t-30 form-border-input-show text-white-label ">
                                                       
                                                             <div class="form-group">
-                                                                <label for="email">From Username</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <label for="email">From UserId</label>
+                                                                <input name="userIdFrom" type="text" class="form-control" placeholder="">
                                                             </div>
                                                             <div class="form-group">
-                                                                <label for="email">To Username</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <label for="email">To UserId</label>
+                                                                <input name="userIdTo" type="text" class="form-control" placeholder="">
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Amount</label>
-                                                                <input name="name" type="text" class="form-control" placeholder="">
+                                                                <input name="amount" type="text" class="form-control" placeholder="">
                                                             </div>
                                                             <div class="form-group">
                                                                 <label for="email">Reason</label>
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea name="reason" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Transfer</button>
+                                                                <button id="transferFundBtn" type="submit" class="btn btn-success btn-block ">Transfer</button>
                                                             </div>
                                                         </form>
                                                     </div>
