--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -191,6 +191,9 @@
         {{#if fundManagement}}
         <script src="js/helpers/api/fundManagementReason.js"></script>
         {{/if}}
+        {{#if userAccount}}
+        <script src="js/helpers/api/userAccount.js"></script>
+        {{/if}}
 
      
         
