--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -75,20 +75,20 @@
                                                 <div class="review-content-section">
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
-                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
-                                                      
+                                                        <form  class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                            <div class="form-group">
+                                                                <label for="email">User Id</label>
+                                                                <input id="userId" name="name" type="text" class="form-control" placeholder="">
+                                                            </div>
+
                                                             <div class="form-group">
                                                                 <label for="email">New Password</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="email">Re-Enter Password</label>
-                                                                <input name="name" type="text" class="form-control" placeholder="">
+                                                                <input id="newPassword" name="cvc" type="text" class="form-control" placeholder="">
                                                             </div>
                                                          
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="passChangeBtn" type="button" class="btn btn-success btn-block ">Update</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -106,15 +106,20 @@
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
                                                         <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
-                                                      
+
+                                                            <div class="form-group">
+                                                                <label for="email">User ID</label>
+                                                                <input id="userId@2" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+
                                                             <div class="form-group">
                                                                 <label for="email">New Username</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <input id="username@2" name="cvc" type="text" class="form-control" placeholder="">
                                                             </div>
                                                           
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="changeUsernameBtn" type="button" class="btn btn-success btn-block ">Change Username</button>
                                                             </div>
                                                         </form>
                                                     </div>
